# obs-replay-source

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  installer.iss.in  replay-filter-async.c  replay-filter-audio.c  replay-filter.c  replay-source.c  replay-source.rc  replay.c  replay.h  version.h  win-dshow-replay.cpp
.github/workflows/: build.yml
CI/macos/: replay-source.pkgproj
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini  es-ES.ini  it-IT.ini
